# Math-functions

./: CMakeLists.txt  common.h  examples.c
algebra/: CMakeLists.txt  complex.c  complex.h  equation.c  equation.h  quaternion.c  quaternion.h
algebra/linear/: CMakeLists.txt  complex.c  complex.h  matrix.c  matrix.h  vector.c  vector.h
geometry/geodesic/: CMakeLists.txt  coordinates.c  coordinates.h  gis.c  gis.h
geometry/plane/: CMakeLists.txt  plane_curve_approximation.c  plane_curve_approximation.h  poligon.c  poligon.h  polygon.c  polygon.h
geometry/space/: CMakeLists.txt  kinematics.c  kinematics.h  space_curve_approximation.c  space_curve_approximation.h
